--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="monetag" content="5c7cfc5c6e4af433401cb170d12a2129">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FitLife 360: Live Strong. Live Long.</title>
@@ -528,4 +529,5 @@ importScripts('https://5gvci.com/act/files/service-worker.min.js?r=sw')
     
 </body>
 </html>
+
 
