--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="186989" async data-cfasync="false"></script>
     <meta name="monetag" content="5c7cfc5c6e4af433401cb170d12a2129">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -529,5 +531,6 @@ importScripts('https://5gvci.com/act/files/service-worker.min.js?r=sw')
     
 </body>
 </html>
+
 
 
